samples/_failures_safe/1761535059_8a210f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa26f95f.c: In function ‘parse_input’:
./samples/SAFE/__tmp_fa26f95f.c:161:38: error: expected ‘)’ at end of input
  161 |     if (input == NULL || strlen(input
      |                                ~     ^
      |                                      )
./samples/SAFE/__tmp_fa26f95f.c:161:5: error: expected declaration or statement at end of input
  161 |     if (input == NULL || strlen(input
      |     ^~
